# FFMpegGLPlay

./: foo.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/henry/ffmpegglplay/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFDeMux.cpp  FFDeMux.h  FFDecode.cpp  FFDecode.h  FFPlayerBuilder.cpp  FFPlayerBuilder.h  FFResample.cpp  FFResample.h  IAudioPlay.cpp  IAudioPlay.h  IDeMux.cpp  IDeMux.h  IDecode.cpp  IDecode.h  IObserver.cpp  IObserver.h  IOpenGLVideoView.cpp  IOpenGLVideoView.h  IPlayer.cpp  IPlayer.h  IPlayerBuilder.cpp  IPlayerBuilder.h  IPlayerProxy.cpp  IPlayerProxy.h  IResample.cpp  IResample.h  OpenEGL.cpp  OpenEGL.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVideoView.cpp  OpenGLVideoView.h  SLAudioPlay.cpp  SLAudioPlay.h  XData.cpp  XData.h  XLog.cpp  XLog.h  XParameter.cpp  (+6 more)
app/src/main/java/com/henry/ffmpegglplay/: MainActivity.java  MyOpenGLVideoView.java  MyOpenGlSurfaceRender.java
app/src/main/res/drawable/: seekbar_style.xml  seekbar_thumb.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/henry/ffmpegglplay/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
